# yew-tutorial-app

./: .gitignore  Cargo.toml  README.markdown  index.html  trunk.toml  yew-tutorial-app-424ab39da2e04a45.js  yew-tutorial-app-424ab39da2e04a45_bg.wasm
.github/workflows/: yew.yml
css/: index.css
public/: index.html
src/: main.rs
src/lib/: data_cog.rs  heading_cog.rs  mod.rs  utils.rs
